--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@emotion/styled": "^10.0.23",
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
-    "gatsby": "^2.18.6",
+    "gatsby": "^2.20.28",
     "gatsby-background-image": "^0.9.11",
-    "gatsby-plugin-mdx": "^1.0.59",
+    "gatsby-image": "^2.3.4",
     "gatsby-plugin-emotion": "^4.1.16",
+    "gatsby-plugin-mdx": "^1.0.59",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-remark-images": "^3.2.5",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.6",
     "react": "^16.12.0",
