--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
   "name": "frontendmasters-gatsby",
   "private": true,
-  "description": "Bare-bones starter for the Gatsby Frontend Masters workshop.",
+  "description": "Built based on Front End Master introduction to gatsby course.",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
+    "develop": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "analyze": "ANALYZE_BUNDLE_SIZE=true gatsby build"
   },
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
-    "gatsby": "^2.20.28",
+    "gatsby": "^2.18.6",
     "gatsby-background-image": "^0.9.11",
-    "gatsby-image": "^2.3.4",
-    "gatsby-plugin-emotion": "^4.1.16",
+    "gatsby-image": "^2.2.34",
     "gatsby-plugin-mdx": "^1.0.59",
+    "gatsby-plugin-emotion": "^4.1.16",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
-    "gatsby-remark-images": "^3.2.5",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
+    "gatsby-remark-images": "^3.1.35",
     "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-source-instagram": "^0.6.1",
     "gatsby-transformer-sharp": "^2.3.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -36,6 +39,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jlengstorf/frontendmasters-gatsby"
+    "url": ""
   }
 }
